Fixed minor layout issue with smart-form

--- a/sass/components/smart/form/_smart-form.scss
+++ b/sass/components/smart/form/_smart-form.scss
@@ -2,7 +2,7 @@
 
 .smart-form--titleSection {
   background: $theme-generic;
-  padding: 10px;
+  padding: 10px 5px;
 }
 
 .smart-form--title {
